--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ MESSAGE(STATUS "Project: ${PROJECT_NAME}")
 MESSAGE(STATUS "Project Directory: ${PORJECT_SOURCE_DIR}")
 message(status ${source})
 
-file(GLOB_RECURSE header ${iShare_SOURCE_DIR}/*.h)
-file(GLOB_RECURSE source ${iShare_SOURCE_DIR}/*.cc)
+file(GLOB_RECURSE header ${iShare_SOURCE_DIR}/*.h ${iShare_SOURCE_DIR}/MMGAPN/*.hpp)
+file(GLOB_RECURSE source ${iShare_SOURCE_DIR}/*.cc ${iShare_SOURCE_DIR}/MMGAPN/*.cpp)
+list(REMOVE_ITEM source ${iShare_SOURCE_DIR}/MMGAPN/feedback.cpp ${iShare_SOURCE_DIR}/MMGAPN/main.cpp)
 
 SET(CMAKE_BUILD_TYPE "Debug")
 set(CMAKE_CXX_FLAGS "-std=c++11")
@@ -50,6 +51,8 @@ target_link_libraries(iShare
     ${MYSQL_CLIENT}     
     dl
     z
+    ssl
+    crypto
     )
 else()
 message(FATAL_ERROR "FATAL ERROR: missing library")
