--- a/test_client/Makefile
+++ b/test_client/Makefile
@@ -1,6 +1,3 @@
-
-HOST_SYSTEM = $(shell uname | cut -f 1 -d_)
-SYSTEM ?= $(HOST_SYSTEM)
 CXX = g++
 CPPFLAGS += -I/usr/local/include -pthread
 CXXFLAGS += -std=c++11
@@ -13,17 +10,11 @@ LDFLAGS += -L/usr/local/lib `pkg-config --libs grpc++ grpc`       \
            -Wl,--no-as-needed -lgrpc++_reflection -Wl,--as-needed \
            -lprotobuf -lpthread -ldl
 endif
-PROTOC = protoc
-GRPC_CPP_PLUGIN = grpc_cpp_plugin
-GRPC_CPP_PLUGIN_PATH ?= `which $(GRPC_CPP_PLUGIN)`
 
-PROTOS_PATH = ../../protos
-
-vpath %.proto $(PROTOS_PATH)
 
 all:greeter_client
 
-greeter_client: iShare.pb.o iShare.grpc.pb.o greeter_client.o
+greeter_client: ../iShare_source/iShare.pb.o ../iShare_source/iShare.grpc.pb.o greeter_client.o
 	$(CXX) $^ $(LDFLAGS) -o $@
 clean:
 	rm -f *.o *.pb.cc *.pb.h greeter_client greeter_server greeter_async_client greeter_async_client2 greeter_async_server
